# onprem

./: 99y_workflows.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile-cuda  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  MSWindows.md  README-WSL.md  README.md  core.html  examples.html  examples_agent.html  examples_classification.html  examples_code.html  examples_guided_prompts.html  examples_information_extraction.html  examples_legal_analysis.html  examples_openai.html  examples_qualitative_survey_analysis.html  examples_rag.html  examples_semantic.html  examples_summarization.html  examples_text_extraction.html  examples_vectorstore_factory.html  guider.html  hf.base.html  hf.data.base.html  hf.data.labels.html  hf.data.questions.html  hf.data.sequences.html  hf.data.texts.html  hf.data.tokens.html  hf.models.models.html  hf.models.onnx.html  hf.models.pooling.base.html  hf.models.pooling.cls.html  hf.models.pooling.factory.html  (+48 more)
.github/workflows/: deploy.yaml  test.yaml
docker/: .dockerignore  Dockerfile  Dockerfile-11.6.1  Dockerfile-12.1.1  Dockerfile-cpu  Dockerfile-cuda  Dockerfile-cuda_simple  Dockerfile-cuda_simple-11.6.1  Dockerfile-cuda_simple-12.1.1  README.md  docker_build.sh  get_cuda_image_tag  podman.md  replace_sqlite3.py
images/: scratch.txt
nbs/: 00_core.ipynb  00_llm.backends.ipynb  00_llm.base.ipynb  00_llm.helpers.ipynb  01_ingest.base.ipynb  01_ingest.helpers.ipynb  01_ingest.ipynb  01_ingest.pdftables.ipynb  01_ingest.search.ipynb  01_ingest.stores.base.ipynb  01_ingest.stores.dense.ipynb  01_ingest.stores.dual.ipynb  01_ingest.stores.factory.ipynb  01_ingest.stores.sparse.ipynb  01_ingest.textstore.ipynb  01_ingest.vectorstore.ipynb  02_utils.ipynb  03_examples.ipynb  03_guider.ipynb  03b_examples_rag.ipynb  03c_examples_code.ipynb  03d_examples_semantic.ipynb  03z_webapp.ipynb  04_pipelines.agent.base.ipynb  04_pipelines.agent.model.ipynb  04_pipelines.agent.tools.ipynb  04_pipelines.classifier.ipynb  04_pipelines.extractor.base.ipynb  04_pipelines.extractor.ipynb  04_pipelines.extractor.models.ipynb  04_pipelines.guider.ipynb  04_pipelines.ipynb  04_pipelines.rag.ipynb  04_pipelines.summarizer.ipynb  05_hf.base.ipynb  05_hf.data.base.ipynb  05_hf.data.labels.ipynb  05_hf.data.questions.ipynb  05_hf.data.sequences.ipynb  05_hf.data.texts.ipynb  (+50 more)
nbs/extra_tests/: test_llm.py  test_qa.py
nbs/sample_data/: test_llm.py  test_onprem.py
nbs/tests/: test_chat.py  test_elasticsearch_store.py  test_onprem.py  test_workflows.py
nbs/tests/extra/: scratch.txt  test_async_example.py  test_async_performance.py
nbs/tests/workflows/: README.md  advanced_workflow_example.yaml  dev_testing_reference.py  example_workflow.yaml  far_analysis_complete.py  far_statutory_citations.xlsx  page_concatenation_demo.yaml  resume_analysis_example.yaml  run_examples.py  test_workflow_example.py  workflow_examples_README.md  workflow_tutorial.md
onprem/: __init__.py  _modidx.py  console.py  core.py  guider.py  ingest.py  pipelines.py  ui.py  utils.py  webapp.py
onprem/app/: OnPrem.py  README.md  __init__.py  console.py  utils.py  webapp.py
onprem/app/.streamlit/: config.toml
onprem/app/pages/: 0_Home.py  1_Prompts.py  2_Document_QA.py  2_Documents.py  3_Document_Analysis.py  3_Document_Search.py  4_Document_Analysis.py  4_Document_Search.py  4_Search.py  5_Manage.py  5_Settings.py  5_Topic_Models.py.disabled  5_Workflow_Builder.py  6_Manage.py  7_Manage.py
onprem/app/static/: workflow_builder.css
onprem/hf/: __init__.py  base.py  hfmodel.py  hfpipeline.py  models.py  onnx.py  registry.py  resolver.py  tensors.py
onprem/hf/data/: base.py  labels.py  questions.py  sequences.py  texts.py  tokens.py
onprem/hf/llm/: factory.py  generation.py  huggingface.py  llm.py
onprem/hf/models/: models.py  onnx.py  registry.py  tokendetection.py
onprem/hf/train/: hfonnx.py  hftrainer.py  mlonnx.py
onprem/ingest/: __init__.py  base.py  helpers.py  pdftables.py  search.py  textstore.py  vectorstore.py
onprem/llm/: __init__.py  backends.py  base.py  helpers.py
onprem/pipelines/: __init__.py  classifier.py  extractor.py  guider.py  rag.py  summarizer.py  workflow.py
onprem/sk/: base.py  clf.py  tm.py
onprem/workflow/: __init__.py  __main__.py  base.py  cli.py  convenience.py  document_transformers.py  engine.py  exceptions.py  exporters.py  loaders.py  processors.py  query.py  registry.py  storage.py  textsplitters.py
site_libs/bootstrap/: bootstrap-302b3f79daa8585235c194e0fecd03e8.min.css  bootstrap-80e91010c642a1f9fc1842d203c8c8a0.min.css  bootstrap-a46dc4aef9e391a85643b3ed89f95805.min.css  bootstrap-ac0578e1f87f273c3fa40b04908a6ea7.min.css  bootstrap-b1527d6dab3c1d2528611d399e709420.min.css  bootstrap-b3ee1e8c853e66aea7633b9f21ac2043.min.css  bootstrap-baedc78cbf92349237790bf011c153e8.min.css  bootstrap-e16dd29f819a46fcdaa82e3575888691.min.css  bootstrap.min.css
tutorials/: workflows-tutorial.md
tutorials/docker/: README.md
(+43 files in other folders)
